# SOA-homeworks

mafia/: README.md  client.py  docker-compose.yaml  notify_server.py  server.py
mafia/dockerfiles/: notify_server.dockerfile  server.dockerfile
mafia/proto/: notify_server.proto  notify_server_pb2.py  notify_server_pb2_grpc.py  server.proto  server_pb2.py  server_pb2_grpc.py
serialization/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
serialization/helpers/: CMakeLists.txt  env.cpp  env.hpp
serialization/protocol/: CMakeLists.txt  message.cpp  message.hpp  multicast.cpp  multicast.hpp
serialization/proxy_server/: CMakeLists.txt  Dockerfile  main.cpp
serialization/proxy_server/query_dispatcher/: dispatcher.cpp  dispatcher.hpp
serialization/serialization/: CMakeLists.txt
serialization/serialization/methods/: base.cpp  base.hpp  builder.hpp  json.hpp  msgpack.hpp  native.hpp  xml.hpp  yaml.hpp
serialization/serialization/methods/protobuf/: base.pb.cc  base.pb.h  base.proto  protobuf.hpp
serialization/serialization/objects/: base.hpp
serialization/worker/: CMakeLists.txt  Dockerfile  main.cpp
serialization/worker/server/: listener.cpp  listener.hpp
